 * Fixed dependency list in README.md (Matthew Scharley)
 * Show Installed Bundles command (John Wells)
 * New API for plugins to hook into the project pane context menu (Matthew Scharley)
 * Auto-detects private keys for remote editing with SSH (Dan Lucraft)
 * Menu items can have a priority (Matthew Scharley)
 * --fork option to detach from console (Matthew Scharley)

Version 0.3.8.4 (24 July 2010)
==============================

 * Parse the xulrunner releases page to determine the latest. (Dan Lucraft)

Version 0.3.8.3 (24 July 2010)
==============================

 * Fix installation (Dan Lucraft)

Version 0.3.8.2 (22 July 2010)
==============================

 * Update xulrunner url AGAIN. (Dan Lucraft)

Version 0.3.8.1 (18 July 2010)
==============================

 * Update xulrunner url to point to existing distribution. (huma- and akautm)
 * Hack to make Rexml load invalid character correctly on 1.9.1. (huma-)
 * Fix installer script to put openssl jar in the right place (Dan Lucraft)

Version 0.3.8 (12 July 2010)
============================

 * Can switch between open trees in a window (Dan Lucraft)
 * Runnables: extensible runnable tasks/build items/tests/generators for projects. (Dan Lucraft)
 * Runnables: run scripts in edit tabs as processes. (Dan Lucraft)
 * Fix for: end key not working in documents with Windows-style line endings (Dan Lucraft)
 * Caches downloaded jar files so that installation is faster when updating versions. (Felipe Coury)
 * Fix for: dragging and dropping HtmlTabs between notebooks and windows. (Dan Lucraft)
 * Select Word command (Johannes Wollert)
 * Move tab up/Move tab down commands (Johannes Wollert)
 * New APIs: Document#current_word, Document#word_at_offset (Johannes Wollert)
 * Made the first tab open for a new install MUCH faster by generating the textmate bundle cache in the install script (Dan Lucraft)
 * Search speedbar is opened with selected text as the default search (Johannes Wollert)