@@ -24,9 +24,8 @@
   }
 </style>
 
-<h3><pre>
-<%= command %>
-</pre></h3>
-
+<h3><%= @title %></h3>
+<pre><%= command %></pre>
+<hr />
 <div id="output">
 </div>
