@@ -18,6 +18,7 @@ Version 0.3.9 (TBA)
  * Auto-detects private keys for remote editing with SSH (Dan Lucraft)
  * Menu items can have a priority (Matthew Scharley)
  * --fork option to detach from console (Matthew Scharley)
+ * Runnables are grouped by file (Delisa)
 
 Version 0.3.8.4 (24 July 2010)
 ==============================
